	- Parallel: asm: ??, module: ??
	Wake-up sequence removed from serial & parallel cables because it 
	perturbates communication start-up.
	
	Beware: Mac OS-X support has been moved to the new architecture but 
	has not been compiled !!!

	Bug in serial link support (mode asm: no timeout on ser_get).
	Bug in parallel link support (mode asm: no timeout on par_get).
	
- 01/03/2004, version 3.7.9: tijl
	BSD usb fix in libticables

- 01/10/2003, version 3.7.8: tijl
	Added INTLLIBS to LDFLAGS in configure.in
	Fix error messages in src/slv_link.c
	Fix compile error in src/intrface.c

- 27/08/2003, version 3.7.7: jb
	Upgraded to libtool 1.5
	Upgraded to automake 1.7
	Use AM_MAINTAINER_MODE

- 21/04/2003, version 3.7.6: roms
        logging support added into the second serial link support.

- 20/04/2003, version 3.7.5b: roms
        porttalk.c added in EXTRA_DIST for po compilation.
	
- 10/04/2003, version 3.7.5: roms
	Tijl's patch merged.
	
- 29/03/2003, version 3.7.4: roms
	i18n updated.
	Typo fixes in tie_link.c
	Included French translations.
	Code source parsed for _() occurences.	
	i18n enabled for Windows.
	indent -kr -i2
	
- 28/03/2003, version 3.7.3: roms
	avr_link support modified: RTS & DTR enabled by default (power supply).
	Added constants for ticable_detect_os.
	Verbose system improved (Win32) and a new function added to the API.
	
- 22/03/2003, version 3.7.2:
	Added JB's patch into slv_link.c
	
- 09/03/2003, version 3.7.1:
	Added type to string conversion functions.
	
- 02/03/2003, version 3.7.0:
	i18n re-enabled.
	
- 26/02/2003, version 3.6.9:
	Tijl's patches for BSD merged.
	
- 22/02/2003, version 3.6.8:
	Doc system improved.
	Bug fix in the logging system (segfault due to out-of-bounds in the
	array). Slightly reworked.
	
- 17/02/2003, version 3.6.7:
	added a better checking for libusb support.
	bug fix in the vti_link support under Windows (DLL was mis-named).
	
- 05/02/2003, version 3.6.6
	Bug fix in intrface.c (serial link).