@@ -34,10 +34,10 @@
 #endif
 
 TIEXPORT int TICALL DISPLAY(const char *format, ...);
-TIEXPORT int TICALL DISPLAY_WARNING(const char *format, ...);
 TIEXPORT int TICALL DISPLAY_ERROR(const char *format, ...);
 TIEXPORT int TICALL ticable_DISPLAY_settings(TicableDisplay op);
 TIEXPORT int TICALL ticable_verbose_set_file(const char *filename);
+TIEXPORT int TICALL ticable_verbose_flush_file(void);
 
 /* Deprecated */
 TIEXPORT FILE *TICALL ticable_DISPLAY_set_output_to_stream(FILE * stream);
