@@ -22,6 +22,8 @@ Log:
 
 	Bug in serial link support (mode asm: no timeout on ser_get).
 	Bug in parallel link support (mode asm: no timeout on par_get).
+
+	Added ability to immediately flush log file to disk.
 	
 - 01/03/2004, version 3.7.9: tijl
 	BSD usb fix in libticables
